--- a/DecisionNav/Views/NavigationItem_View/Index.cshtml
+++ b/DecisionNav/Views/NavigationItem_View/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DecisionNav.Models.NavigationItem_View>
+﻿@model DecisionNav.Models.ViewModels.NavigationItem_ViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -10,44 +10,29 @@
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ClientID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TopicId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ViewId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RType)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
+
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ClientID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TopicId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ViewId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RType)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.NavigationItem_View)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ClientID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TopicId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ViewId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RType)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
