--- a/DecisionNav/Views/Shared/_NavListPartial.cshtml
+++ b/DecisionNav/Views/Shared/_NavListPartial.cshtml
@@ -18,7 +18,7 @@
     else
     {
         <li class="nav-item dropdown">
-            <a class="nav-link" href="#" id="pagesDropdown-@menu.Id" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link" href="@menu.ViewId" id="pagesDropdown-@menu.Id" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span>@menu.DefaultName</span>
             </a>
         </li>
